# agent-resume

./: CLAUDE.md  Cargo.toml  README.md
data/: skills.toml
data/experiences/: censible.toml  crystalcommerce.toml  flextronics.toml  freelance.toml  milyoni.toml  naspp.toml  neo-innovation.toml  open-source.toml  peer-to-patent.toml  pivotal-labs.toml  presence-ai.toml  rundavoo.toml  socialchorus.toml  truecar.toml
src/: data.rs  lib.rs  main.rs  profile.rs  render.rs  score.rs  search.rs
