[package]
name = "agent-resume"
version = "0.1.0"
edition = "2024"
description = "Resume generator with structured experience data and tag-based content assembly"
license = "MIT"
repository = "https://github.com/btakita/agent-resume"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
glob = "0.3"
regex = "1"
